--- a/META.yml
+++ b/META.yml
@@ -1,6 +1,6 @@
 ---
 name: SNA-Network
-version: 0.01
+version: 0.02
 author:
   - 'Darko Obradovic <dobradovic@gmx.de>'
 abstract: A toolkit for Social Network Analysis
@@ -8,11 +8,12 @@ license: perl
 resources:
   license: http://dev.perl.org/licenses/
 build_requires:
+  Module::List::Pluggable: 0
   Test::More: 0
 provides:
   SNA::Network:
     file: lib/SNA/Network.pm
-    version: 0.01
+    version: 0.02
   SNA::Network::Algorithm::HITS:
     file: lib/SNA/Network/Algorithm/HITS.pm
   SNA::Network::Edge:
@@ -23,6 +24,10 @@ provides:
     file: lib/SNA/Network/Filter/Pajek.pm
   SNA::Network::Node:
     file: lib/SNA/Network/Node.pm
+  SNA::Network::Node::Plugin::Test:
+    file: lib/SNA/Network/Node/Plugin/Test.pm
+  SNA::Network::Plugin::Test:
+    file: lib/SNA/Network/Plugin/Test.pm
 generated_by: Module::Build version 0.2808
 meta-spec:
   url: http://module-build.sourceforge.net/META-spec-v1.2.html
