--- a/META.yml
+++ b/META.yml
@@ -1,6 +1,6 @@
 ---
 name: SNA-Network
-version: 0.04
+version: 0.05
 author:
   - 'Darko Obradovic <dobradovic@gmx.de>'
 abstract: A toolkit for Social Network Analysis
@@ -11,10 +11,12 @@ build_requires:
   List::MoreUtils: 0
   Module::List::Pluggable: 0
   Test::More: 0
+configure_requires:
+  Module::Build: 0.35
 provides:
   SNA::Network:
     file: lib/SNA/Network.pm
-    version: 0.04
+    version: 0.05
   SNA::Network::Algorithm::Connectivity:
     file: lib/SNA/Network/Algorithm/Connectivity.pm
   SNA::Network::Algorithm::HITS:
@@ -25,13 +27,15 @@ provides:
     file: lib/SNA/Network/Filter/Guess.pm
   SNA::Network::Filter::Pajek:
     file: lib/SNA/Network/Filter/Pajek.pm
+  SNA::Network::Generator::ByDensity:
+    file: lib/SNA/Network/Generator/ByDensity.pm
   SNA::Network::Node:
     file: lib/SNA/Network/Node.pm
   SNA::Network::Node::Plugin::Test:
     file: lib/SNA/Network/Node/Plugin/Test.pm
   SNA::Network::Plugin::Test:
     file: lib/SNA/Network/Plugin/Test.pm
-generated_by: Module::Build version 0.2808
+generated_by: Module::Build version 0.35
 meta-spec:
-  url: http://module-build.sourceforge.net/META-spec-v1.2.html
-  version: 1.2
+  url: http://module-build.sourceforge.net/META-spec-v1.4.html
+  version: 1.4
