--- a/META.yml
+++ b/META.yml
@@ -5,6 +5,7 @@ author:
 build_requires:
   List::MoreUtils: 0
   Module::List::Pluggable: 0
+  Test::Memory::Cycle: 0
   Test::More: 0
 configure_requires:
   Module::Build: 0.36
@@ -17,11 +18,13 @@ name: SNA-Network
 provides:
   SNA::Network:
     file: lib/SNA/Network.pm
-    version: 0.07
+    version: 0.08
   SNA::Network::Algorithm::Connectivity:
     file: lib/SNA/Network/Algorithm/Connectivity.pm
   SNA::Network::Algorithm::HITS:
     file: lib/SNA/Network/Algorithm/HITS.pm
+  SNA::Network::Algorithm::PageRank:
+    file: lib/SNA/Network/Algorithm/PageRank.pm
   SNA::Network::Edge:
     file: lib/SNA/Network/Edge.pm
   SNA::Network::Filter::Guess:
@@ -30,6 +33,8 @@ provides:
     file: lib/SNA/Network/Filter/Pajek.pm
   SNA::Network::Generator::ByDensity:
     file: lib/SNA/Network/Generator/ByDensity.pm
+  SNA::Network::Generator::ConfigurationModel:
+    file: lib/SNA/Network/Generator/ConfigurationModel.pm
   SNA::Network::Node:
     file: lib/SNA/Network/Node.pm
   SNA::Network::Node::Plugin::Test:
@@ -38,4 +43,4 @@ provides:
     file: lib/SNA/Network/Plugin/Test.pm
 resources:
   license: http://dev.perl.org/licenses/
-version: 0.07
+version: 0.08
