Import of OBRADOVIC/SNA-Network-0.11 from CPAN.
gitpan-cpan-distribution: SNA-Network
gitpan-cpan-version:      0.11
gitpan-cpan-path:         OBRADOVIC/SNA-Network-0.11.tar.gz
gitpan-cpan-author:       OBRADOVIC
gitpan-cpan-maturity:     released

--- a/META.yml
+++ b/META.yml
@@ -19,7 +19,9 @@ name: SNA-Network
 provides:
   SNA::Network:
     file: lib/SNA/Network.pm
-    version: 0.10
+    version: 0.11
+  SNA::Network::Algorithm::Betweenness:
+    file: lib/SNA/Network/Algorithm/Betweenness.pm
   SNA::Network::Algorithm::Connectivity:
     file: lib/SNA/Network/Algorithm/Connectivity.pm
   SNA::Network::Algorithm::HITS:
@@ -44,4 +46,4 @@ provides:
     file: lib/SNA/Network/Plugin/Test.pm
 resources:
   license: http://dev.perl.org/licenses/
-version: 0.10
+version: 0.11
