--- a/META.yml
+++ b/META.yml
@@ -9,8 +9,9 @@ build_requires:
   Test::Memory::Cycle: 0
   Test::More: 0
 configure_requires:
-  Module::Build: 0.36
-generated_by: 'Module::Build version 0.3607'
+  Module::Build: 0.40
+dynamic_config: 1
+generated_by: 'Module::Build version 0.4002, CPAN::Meta::Converter version 2.112150'
 license: perl
 meta-spec:
   url: http://module-build.sourceforge.net/META-spec-v1.4.html
@@ -19,33 +20,46 @@ name: SNA-Network
 provides:
   SNA::Network:
     file: lib/SNA/Network.pm
-    version: 0.13
+    version: 0.14
   SNA::Network::Algorithm::Betweenness:
     file: lib/SNA/Network/Algorithm/Betweenness.pm
+    version: 0
   SNA::Network::Algorithm::Connectivity:
     file: lib/SNA/Network/Algorithm/Connectivity.pm
+    version: 0
   SNA::Network::Algorithm::Cores:
     file: lib/SNA/Network/Algorithm/Cores.pm
+    version: 0
   SNA::Network::Algorithm::HITS:
     file: lib/SNA/Network/Algorithm/HITS.pm
+    version: 0
   SNA::Network::Algorithm::PageRank:
     file: lib/SNA/Network/Algorithm/PageRank.pm
+    version: 0
   SNA::Network::Edge:
     file: lib/SNA/Network/Edge.pm
+    version: 0
   SNA::Network::Filter::Guess:
     file: lib/SNA/Network/Filter/Guess.pm
+    version: 0
   SNA::Network::Filter::Pajek:
     file: lib/SNA/Network/Filter/Pajek.pm
+    version: 0
   SNA::Network::Generator::ByDensity:
     file: lib/SNA/Network/Generator/ByDensity.pm
+    version: 0
   SNA::Network::Generator::ConfigurationModel:
     file: lib/SNA/Network/Generator/ConfigurationModel.pm
+    version: 0
   SNA::Network::Node:
     file: lib/SNA/Network/Node.pm
+    version: 0
   SNA::Network::Node::Plugin::Test:
     file: lib/SNA/Network/Node/Plugin/Test.pm
+    version: 0
   SNA::Network::Plugin::Test:
     file: lib/SNA/Network/Plugin/Test.pm
+    version: 0
 resources:
   license: http://dev.perl.org/licenses/
-version: 0.13
+version: 0.14
