--- a/META.yml
+++ b/META.yml
@@ -3,7 +3,9 @@ abstract: 'A toolkit for Social Network Analysis'
 author:
   - 'Darko Obradovic <dobradovic@gmx.de>'
 build_requires:
+  Carp: 0
   List::MoreUtils: 0
+  List::Util: 0
   Module::List::Pluggable: 0
   Object::Tiny::XS: 0
   Test::Memory::Cycle: 0
@@ -20,7 +22,7 @@ name: SNA-Network
 provides:
   SNA::Network:
     file: lib/SNA/Network.pm
-    version: 0.14
+    version: 0.15
   SNA::Network::Algorithm::Betweenness:
     file: lib/SNA/Network/Algorithm/Betweenness.pm
     version: 0
@@ -33,8 +35,14 @@ provides:
   SNA::Network::Algorithm::HITS:
     file: lib/SNA/Network/Algorithm/HITS.pm
     version: 0
+  SNA::Network::Algorithm::Louvain:
+    file: lib/SNA/Network/Algorithm/Louvain.pm
+    version: 0
   SNA::Network::Algorithm::PageRank:
     file: lib/SNA/Network/Algorithm/PageRank.pm
+    version: 0
+  SNA::Network::Community:
+    file: lib/SNA/Network/Community.pm
     version: 0
   SNA::Network::Edge:
     file: lib/SNA/Network/Edge.pm
@@ -62,4 +70,4 @@ provides:
     version: 0
 resources:
   license: http://dev.perl.org/licenses/
-version: 0.14
+version: 0.15
